@@ -2,6 +2,7 @@ Version 3.5.0
 * Post DiFX 2.4
 * Remove duplicate RDATE keywords from AG and ML tables
 * With changes in difxio, ensure same-day EOPs are equal before merging jobs
+* Make use of EOP merging mode concept.  See changelog in difxio.
 * plotpcal2 : second attempt to plot pcals in a more general way.  Still not super satisfactory.
 
 Version 3.4.0
